--- a/GDriveHelper/index.html
+++ b/GDriveHelper/index.html
@@ -12,12 +12,10 @@
 		<script defer type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
 		<script defer nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
 
-		<!-- Ionicons CDN
-		<script defer src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-		-->
+		<!-- Ionicons CDN -->
 		<script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule="" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"></script>
-
+    
 		<link rel="stylesheet" href="./variables.css"/>
 		<link rel="stylesheet" href="./style.css"/>
 		<script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
