--- a/GDriveHelper/index.html
+++ b/GDriveHelper/index.html
@@ -53,7 +53,9 @@
 				</ion-card>
 				
 				<div id="result"></div>
-			
+				
+				<center style="font-size: 15px"> Developed By Mohammed Ashad <br />
+				 ©️ 2021 <a href="e-labinnovations.github.io"> e-lab innovations</a> </center>
 			</ion-content>
 		</ion-app>
 	</body>
